--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,16 @@ after_success:
   - docker push csilva2810/nginx
   - docker push csilva2810/server
   - docker push csilva2810/worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-1-363118176643
+  bucket_path: multi-docker
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
